--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Cherry-project Template Engine",
     "type": "library",
     "keywords": ["cherry","templating"],
-    "homepage": "https://github.com/ABGEO07/cherry-templater",
+    "homepage": "https://github.com/cherry-framework/templater",
     "license": "MIT",
     "authors": [
         {
@@ -16,7 +16,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.6.0",
-        "cherry-project/response": "v1.0.1"
+        "cherry-project/response": "1.0.*"
     },
     "autoload": {
         "psr-4": {
